@@ -395,6 +395,9 @@ C-API
 Library
 -------
 
+- Issue #7150: Raise OverflowError if the result of adding or subtracting
+  timedelta from date or datetime falls outside of the MINYEAR:MAXYEAR range.
+
 - Issue #8806: add SSL contexts support to ftplib.
 
 - Issue #4769: Fix main() function of the base64 module, use sys.stdin.buffer
